--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@types/react-vis": "^1.11.3",
+    "@types/uuid": "^8.3.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
