--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "@types/react-vis": "^1.11.3",
-    "@types/uuid": "^8.3.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-vis": "^1.11.7",
-    "uuid": "^8.3.1"
+    "@babel/runtime": "^7.12.1",
+    "@types/d3-format": "2.0.0",
+    "@types/react": "16.9.53",
+    "@types/react-bootstrap": "1.0.1",
+    "@types/react-dom": "16.9.8",
+    "@types/react-vis": "1.11.4",
+    "@types/uuid": "8.3.0",
+    "bootstrap": "4.5.3",
+    "d3-format": "2.0.0",
+    "jquery": "3.5.1",
+    "popper.js": "1.16.1",
+    "react": "16.14.0",
+    "react-bootstrap": "1.3.0",
+    "react-dom": "16.14.0",
+    "react-vis": "1.11.7",
+    "uuid": "8.3.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
