--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
+    "react-icons": "^3.11.0",
     "react-vis": "1.11.7",
     "uuid": "8.3.1"
   },
