--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-dom": "16.8.0",
     "@types/react-vis": "^1.11.5",
+    "alasql": "^0.6.5",
     "bootstrap": "4.5.3",
     "d3-format": "2.0.0",
     "jquery": "3.5.1",
